directly from getCubes() etc. We would not need to populate a deferred list on get(cubename).
* However, for now it works.

==2 Sep 2013==
* Renamed LD_Cubes test case to "Example_QB_Datasets_QueryTest".
* Logical Olap Op DiceOp now receives List<Node[]> of cube that is
used in query processing.
* removed all errors in sources

==31 Aug 2013==
* Logical Olap Op ProjectionOp now receives List<Node[]> of cube that is
used in query processing.

==30 Aug 2013==
* Logical Olap Op BaseCube now receives List<Node[]> of cube that is
used in query processing.
* Status of junit test LD_Cubes_Explorer_QueryTest.java: Only tests
related to the setDatabase problem and Edgar loading do not succeed.

==2013-08-16==
* Added methods to metadata objects to get List<Node[]> representation to be used in olap 
operators (as an interface to Linked Data Engine).

==2013-08-15==
* Logical OLAP Operators (http://www.linked-data-cubes.org/index.php/Olap4ld_Query_Optimizer)
* Changed Visitor to LogicalOlapOperatorPlanVisitor

==2013-08-14==
* If now aggregation function is found, we automatically create new measures with certain
aggregation functions (simply added aggregation fnct name to the end). 
However, WATCH OUT, BIND-syntax of SPARQL is complicated: You should not be
using the variable that you are binding to in other patterns (see, e.g., ?MEASURE_AGGREGATOR_PART)

==2013-08-07==
* Improved exception handling. Now, LinkedDataEngine also returns OlapExceptions which are forwarded
to the using engine in order to make transparent errors to users.

==2013-07-12==
* Removed sesame libraries. Sesame is to be added externally when using sesame engines in olap4ld

==2013-07-11==
* Full spec tests on test data
* Full spec test better loging for users, independent from logging level. Better log-out.

==2013-07-10==
* Eurostat examples. Have English labels.
* Extended test cases
* Retrieving of data so far very simple: 
** rollback every time we ask the database catalog for its schema.